--- a/index.html
+++ b/index.html
@@ -156,11 +156,11 @@
                     max="100"
                     value="50"
                     step="1"
-                    placeholder="50%"
+                    placeholder="50"
                     oninput="validateInput(this)"
                     onkeydown="return isIntegerKey(event)"
                   />
-                  <span class="percentage-symbol">%</span>
+                  <label class="percentage-symbol">%</label>
                 </div>
                 <input
                   class="volume-slider"
