--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     />
     <title>Pimsleur Progress Tracker</title>
     <link rel="stylesheet" href="css/styles.css" />
-    <link rel="icon" href="assets/images/pimsleur-icon.png" type="image/png" />
-    <link rel="apple-touch-icon" href="assets/images/pimsleur-ios-icon.png" />
+    <link rel="icon" href="assets/images/favicon.ico" type="image/png" />
+    <link rel="apple-touch-icon" href="assets/images/favicon.ico" />
     <script src="js/script.js" defer></script>
   </head>
 
