--- a/index.html
+++ b/index.html
@@ -8,8 +8,12 @@
     />
     <title>Pimsleur Progress Tracker</title>
     <link rel="stylesheet" href="css/styles.css" />
-    <link rel="icon" href="assets/images/favicon.ico" type="image/png" />
-    <link rel="apple-touch-icon" href="assets/images/favicon.ico" />
+    <link rel="icon" href="assets/images/favicon.ico" type="image/x-icon" />
+    <link
+      rel="apple-touch-icon"
+      href="assets/images/favicon.ico"
+      type="image/x-icon"
+    />
     <script src="js/script.js" defer></script>
   </head>
 
