--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="icon" href="assets/images/favicon.ico" type="image/x-icon" />
     <link
       rel="apple-touch-icon"
-      href="assets/images/favicon.ico"
+      href="assets/images/pimsleur-ios-icon.png"
       type="image/x-icon"
     />
     <script src="js/script.js" defer></script>
@@ -160,7 +160,7 @@
                     max="100"
                     value="5"
                     step="1"
-                    placeholder="50"
+                    placeholder="5"
                     oninput="validateInput(this)"
                     onkeydown="return isIntegerKey(event)"
                   />
