feat: update cuz my phone crashes in the winter

--- a/index.html
+++ b/index.html
@@ -94,12 +94,18 @@
                 </div>
                 <!-- End of demo items. -->
               </div>
-              <button
-                id="filterButton"
-                class="filter-button btn filter-mode-off"
-              >
-                🧹 Filter
-              </button>
+              <div class="filter-container">
+                <button
+                  id="filterButton"
+                  class="filter-button btn filter-mode-off"
+                >
+                  🧹 Filter
+                </button>
+                <div>
+                  <label for="lockScrollToggle">🔒</label>
+                  <input type="checkbox" id="lockScrollToggle" />
+                </div>
+              </div>
             </div>
           </div>
 
@@ -290,6 +296,11 @@
             <p>
               <strong>🔦 Dark Mode Toggle:</strong> Enables dark mode to reduce
               eye strain and improve readability in low-light conditions.
+            </p>
+
+            <p>
+              <strong>🔒 Lock Screen Scroll Toggle:</strong> Activates the lock
+              screen scroll feature, preventing the page from scrolling.
             </p>
 
             <p>
