--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                 >
                   🧹 Filter
                 </button>
-                <div>
+                <div class="lock-container">
                   <label for="lockScrollToggle">🔒</label>
                   <input type="checkbox" id="lockScrollToggle" />
                 </div>
